--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.taskScheduler</groupId>
+    <groupId>task_manager</groupId>
     <artifactId>Task-Scheduler</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -23,7 +23,13 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.6.0</version>
+            <version>42.7.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.16</version>
         </dependency>
     </dependencies>
     <build>
@@ -36,7 +42,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>taskManager.service.impl.ServerNotification</mainClass>
+                            <mainClass>task_manager.service.impl.ServerNotification</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
